tests/errors/module_used_as_ty_err/sub.fs
module rec module_used_as_ty_err.sub

let f () = ()
